# python-space-builder

./: .gitignore  README.md  diff.patch  pyproject.toml
cli/: file_maker.py  fmake.py  pbuild.py
code/: hello.py  logger.py  loggers.py  param_of_list.py  path_manager.py  practice_buidler.py  practice_checker.py  utils.py
prac_open_ai/: config.py  logger.py  main01.py  main02.py
src/prac_py_v2/: __init__.py
tests/: test_hello.py  test_logger.py
