[project]
name = "prac-py-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shiori-Takanashi", email = "nao69alter@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]
