[project]
name = "python-space-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shiori", email = "nao69alter@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]

[tool.ruff]
line-length = 88
target-version = "py311"

# チェックルール
lint.select = ["E", "F", "I"]  # E=pycodestyle, F=pyflakes, I=isort
lint.fixable = ["ALL"]

# 除外したいルール
lint.ignore = []

# 整形設定（ruff format）
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
pythonpath = ["."]
